...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="nFF-t2-V4X" id="tdI-gG-Oxv"/>
                            <outlet property="delegate" destination="nFF-t2-V4X" id="lDZ-Xk-QoF"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Staff" id="V2g-Ze-BUl">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="Y0M-P2-61u">
                            <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="DGT-jL-V4x" kind="unwind" unwindAction="unwindCancelActionWithUnwindSegue:" id="5cU-PN-NhE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
